images and portfolio section changed

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="banner-area">
                         <div class="author text-center">
                             <div class="author-img"></div>
-                            <h1 class="text-black font-staat font-size-40 text-uppercase py-3">Santosh Adhikari and Saroj</h1>
+                            <h1 class="text-black font-staat font-size-40 text-uppercase py-3">Santosh Adhikari</h1>
                             <h5 class="text-black font-ram font-size-27">I'm a <span id="typed"></span></h5>
                         </div>
                     </div>
@@ -166,7 +166,7 @@
                 <!-- #services -->
 
                 <!-- work -->
-                <section class="work py-5 px-4 bg-light" id="portfolio">
+                <!-- <section class="work py-5 px-4 bg-light" id="portfolio">
                     <div class="py-3">
                         <h5 class="text-uppercase font-os font-size-16 text-muted">Porfolio</h5>
                         <h1 class="text-uppercase font-staat font-size-34">Creative Work</h1>
@@ -221,7 +221,7 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </section> -->
                 <!-- #work -->
 
 
