--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <img src="./assets/banner.png" alt="profile image" class="img-fluid">
                         </div>
                         <div class="col-sm-6">
-                            <h6 class="text-uppercase font-os font-size-16 text-muted">About Me</h6>
+                            <h6 class="text-uppercase font-os font-size-16 text-muted">About Me and Myself</h6>
                             <h5 class="font-ram font-size-20 py-2">I'm Santosh Adhikari, a <span id="typed_2"></span></h5>
                             <p class="font-ram text-black-50 py-2">
                                 I try to hera ta saroj create noice web experiences. I am experienced in Amazon Web Services and can
