--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                             class="nav-item nav-link text-white-50 font-os font-size-16 active">About</a>
                         <a href="#awards"
                             class="nav-item nav-link text-white-50 font-os font-size-16 active">Achievements</a>
-                        <a href="#portfolio"
-                            class="nav-item nav-link text-white-50 font-os font-size-16 active">Portfolio</a>
+                        <!-- <a href="#portfolio"
+                            class="nav-item nav-link text-white-50 font-os font-size-16 active">Portfolio</a> -->
                         <div class="counter-number nav-item nav-link text-white-50 font-os font-size-16 active">Couldn't
                             read the counter</div>
                     </div>
@@ -68,10 +68,10 @@
                             <img src="./assets/banner.png" alt="profile image" class="img-fluid">
                         </div>
                         <div class="col-sm-6">
-                            <h6 class="text-uppercase font-os font-size-16 text-muted">About Me and Myself</h6>
+                            <h6 class="text-uppercase font-os font-size-16 text-muted">About Me</h6>
                             <h5 class="font-ram font-size-20 py-2">I'm Santosh Adhikari, a <span id="typed_2"></span></h5>
                             <p class="font-ram text-black-50 py-2">
-                                I try to hera ta saroj create noice web experiences. I am experienced in Amazon Web Services and can
+                                I try to create nice web experiences. I am experienced in Amazon Web Services and can
                                 help clients with several related technologies. A young technical guy with experience in
                                 creating solutions for customers. Dynamic and goal-oriented. Confident and poised in
                                 interactions with individuals at all levels. Focused and dedicated; I have a good eye
@@ -80,7 +80,7 @@
                             <div class="d-flex flex-row flex-wrap justify-content-between py-4">
                                 <div class="d-flex flex-column">
                                     <p class="font-ram"><b>Website: </b><span
-                                            class="text-black-50">santoshadhikari1345.com</span></p>
+                                            class="text-black-50">www.santoshadhikari1345.com.np</span></p>
                                 </div>
                             </div>
                             <button type="submit" onclick="window.open('/assets/SantoshAdhikariResume.pdf')"
