--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <img src="./assets/banner.png" alt="profile image" class="img-fluid">
                         </div>
                         <div class="col-sm-6">
-                            <h6 class="text-uppercase font-os font-size-16 text-muted">About Me</h6>
+                            <h6 class="text-uppercase font-os font-size-16 text-muted">About Me and Myself</h6>
                             <h5 class="font-ram font-size-20 py-2">I'm Santosh Adhikari, a <span id="typed_2"></span></h5>
                             <p class="font-ram text-black-50 py-2">
                                 I try to create nice web experiences. I am experienced in Amazon Web Services and can
@@ -79,7 +79,7 @@
                             </p>
                             <div class="d-flex flex-row flex-wrap justify-content-between py-4">
                                 <div class="d-flex flex-column">
-                                    <p class="font-ram"><b>Website: </b><span
+                                    <p class="font-ram"><b>Website: </b><span>
                                             class="text-black-50">www.santoshadhikari1345.com.np</span></p>
                                 </div>
                             </div>
