link added in certification name

--- a/index.html
+++ b/index.html
@@ -138,8 +138,9 @@
 
                         <ul class="fa-ul mb-0 font-ram font-size-16 text-black-50 pb-3">
                             <li>
+                                <a id="no-underline"target="blank" href="https://www.credly.com/badges/522fa679-1150-4ad9-8841-bf6c439e00d6/public_url">
                                 <i class="fa-li fa fa-trophy text-warning"></i>
-                                AWS Certified Cloud Practitioner
+                                AWS Certified Cloud Practitioner</a>
                             </li>
                             <li>
                                 <i class="fa-li fa fa-trophy text-warning"></i>
